# prism

./: .gitignore  Makefile  README.md  create_model.py  pyproject.toml
.github/workflows/: ci.yml
config/: base.yaml  kafka.yaml  milvus.yaml
deploy/: docker-compose.local.yml  docker-compose.prod.yml
deploy/k8s/: infrastructure.yaml  services.yaml
model_repository/: config.pbtxt
src/prism/: exceptions.py
src/prism/api/: app.py  routes.py
src/prism/database/: milvus_client.py  vector_store.py
src/prism/inference/: processor.py  triton_client.py
src/prism/ingestion/: producer.py  video_reader.py
src/prism/ui/: dashboard.py
src/prism/utils/: logger.py
