[project]
name = "prism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.12.2",
    "fastapi>=0.123.5",
    "hydra-core>=1.3.2",
    "numpy>=2.3.5",
    "onnx>=1.20.0",
    "opencv-python-headless>=4.11.0.86",
    "pymilvus>=2.6.4",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "ultralytics>=8.3.234",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]
